# zed-mest

./: .gitignore  Cargo.toml  README.md  extension.toml  extension.wasm
grammars/: mest.wasm
grammars/mest/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
grammars/mest/bindings/c/: tree-sitter-mest.pc.in
grammars/mest/bindings/c/tree_sitter/: tree-sitter-mest.h
grammars/mest/bindings/go/: binding.go  binding_test.go
grammars/mest/bindings/node/: binding.cc  index.d.ts  index.js
grammars/mest/bindings/python/tests/: test_binding.py
grammars/mest/bindings/python/tree_sitter_mest/: __init__.py  binding.c
grammars/mest/bindings/rust/: build.rs  lib.rs
grammars/mest/bindings/swift/TreeSitterMestTests/: TreeSitterMestTests.swift
grammars/mest/queries/: folds.scm  highlights.scm
grammars/mest/src/: grammar.json  node-types.json  parser.c
languages/mest/: config.toml  folds.scm  highlights.scm
src/: lib.rs
