[package]
name = "tree-sitter-mest"
description = "A simple functional programming language made for learning purposes!"
version = "0.1.0"
authors = ["Gonçalo Pontes <gpm.pontes@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "mest"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/goncalompontes/tree-sitter-mest"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.9"
